# cuddly-succotash

./: .gitignore  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: iphone_olx.csv  iphone_tokopedia.csv  iphone_tokopedia_cleaned.csv  iphone_tokopedia_cleaned.json
src/cuddly/: main.py  parse_json.py  scraper_tokped.py  scrapping.py  ui.py  utils.py
src/cuddly/components/: charts.py  maps.py  tables.py
src/cuddly/data/: iphone_tokopedia.csv
